cmabié a todos los embeddings

--- a/Jupyter_notebook.ipynb
+++ b/Jupyter_notebook.ipynb
@@ -123,11 +123,11 @@
    "outputs": [],
    "source": [
     "# Embeddings utilizados.\n",
-    "#embeddings_WIKI = KeyedVectors.load_word2vec_format('embeddings/wiki.es.vec', limit=None)\n",
-    "#embeddings_SUC = KeyedVectors.load_word2vec_format('embeddings/embeddings-l-model.vec', limit=None)\n",
+    "embeddings_WIKI = KeyedVectors.load_word2vec_format('embeddings/wiki.es.vec', limit=None)\n",
+    "embeddings_SUC = KeyedVectors.load_word2vec_format('embeddings/embeddings-l-model.vec', limit=None)\n",
     "embeddings_SWOW = KeyedVectors.load_word2vec_format('embeddings/swow.embedding.was.26-04-2022.vec', limit=None)\n",
-    "lwer_embeddings_SWOW = KeyedVectors(vector_size=embeddings_SWOW.vector_size)\n",
-    "#embeddings_SBWC = KeyedVectors.load_word2vec_format('embeddings/SBW-vectors-300-min5.txt', limit=None)\n",
+    "lower_embeddings_SWOW = KeyedVectors(vector_size=embeddings_SWOW.vector_size)\n",
+    "embeddings_SBWC = KeyedVectors.load_word2vec_format('embeddings/SBW-vectors-300-min5.txt', limit=None)\n",
     "embeddings_Glove = KeyedVectors.load_word2vec_format('embeddings/glove-sbwc.i25.vec', limit=None)"
    ]
   },
@@ -166,8 +166,8 @@
    "source": [
     "# Listado de los embeddings utilizados. \n",
     "#lista_de_Embeddings = [embeddings_WIKI, embeddings_SUC, lower_embeddings_SWOW, embeddings_SBWC, embeddings_Glove]\n",
-    "lista_de_Embeddings = [lower_embeddings_SWOW, embeddings_Glove]\n",
-    "#lista_de_Embeddings = [embeddings_WIKI, embeddings_SUC, lower_embeddings_SWOW, embeddings_SBWC, embeddings_Glove"
+    "#lista_de_Embeddings = [lower_embeddings_SWOW, embeddings_Glove]\n",
+    "lista_de_Embeddings = [embeddings_WIKI, embeddings_SUC, lower_embeddings_SWOW, embeddings_SBWC, embeddings_Glove"
    ]
   },
   {
